--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -18,8 +18,9 @@
   <select class="dataselect" name="operation[operation_type]">
     <option value="all"> all </option>
     <option value="billing"> billing </option>
-    <option value="communications"> communications </option>
     <option value="profile"> profile </option>
+    <option value="communications"> communications </option>
+    <option value="fulfillments"> fulfillments </option>
     <option value="others"> others </option>
   </select>
 </div>  
