ref#25650-25647-updated fulfillment states. Updated default club's products. ALso fixed some tests.

--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -14,7 +14,7 @@
       <tr> <td colspan="5"> <%= t('activerecord.attributes.fulfillment.not_found') %> </td> </tr>
     <% end %> 
     <% @fulfillments.each do |fulfillment| %>
-  		<tr <% if fulfillment.processing? %> 
+  		<tr <% if fulfillment.in_process? %> 
         	  class="ligthgreen" 
        		 <% end %> >
         <td> <%= I18n.l fulfillment.assigned_at, :format => :long %> </td>
