--- a/app/views/shared/_fulfillment_actions.html.erb
+++ b/app/views/shared/_fulfillment_actions.html.erb
@@ -1,7 +1,7 @@
 <% if fulfillment.renewed %>
   <%= t('activerecord.attributes.fulfillment.renewed')%>
 <% else %>
-  <% if fulfillment.processing? %>
+  <% if fulfillment.in_process? %>
     <% unless fulfillment.member.wrong_address %>
       <%= (link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id, :class=> "btn btn-small") if can? :mark_as_sent, Fulfillment %>
       <% unless member_show %>
@@ -15,7 +15,7 @@
   		<%= t('activerecord.attributes.member.undeliverable') %>
       <% end %>
   	<% end %>
-  <% elsif fulfillment.out_of_stock? or fulfillment.undeliverable? %>
+  <% elsif fulfillment.out_of_stock? or fulfillment.bad_address? %>
     <% if fulfillment.member.wrong_address %>
       <% unless member_show %>
       <%= link_to t('activerecord.attributes.member.undeliverable'), show_member_path(:member_prefix => fulfillment.member.visible_id)%>
