--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -33,8 +33,7 @@
         </td>
         <td>
           <%= label :product_type, t('activerecord.attributes.fulfillment.product_type'), :class => 'help-inline' %>
-          <%= select_tag :product_type, options_for_select([['KIT-CARD'],['OTHERS']], :selected => params[:product_type]),
-                                  :class => 'select_field input-medium' %>  
+          <%= select_tag :product_type, options_for_select([['KIT-CARD'],['SLOOPS']], :selected => params[:product_type]), :class => 'select_field input-medium' %>  
         </td>
     	</tr>
     	<tr>
