--- a/app/views/fulfillments/files.html.erb
+++ b/app/views/fulfillments/files.html.erb
@@ -9,13 +9,13 @@
     <tr>
       <th id="th_id"> <%= t('activerecord.attributes.fulfillment_files.id') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.created_at') %> </th>
-      <th> <%= t('activerecord.attributes.fulfillment_files.download') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment_files.working_file') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.view') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.status') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.product') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.date') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.processed') %> </th>
-      <th> <%= t('buttons.actions') %> </th>
+      <th> <%= t('actions') %> </th>
     </tr>
   </thead>
   <tbody>
