--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -44,6 +44,13 @@
       <%= f.check_box :allow_backorder, :class => 'check_box' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :cost_center, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :cost_center, :class => 'text_field' %>
+    </div>
+  </div>
+
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
