refs #25774 - improvents. order communications descending. also css disabled links must be really disabled.

--- a/app/views/shared/_reset_password_button.html.erb
+++ b/app/views/shared/_reset_password_button.html.erb
@@ -2,8 +2,8 @@
 <% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
   <%= 
     link_to "#", 
-      method: :post,
       id: "password_reset",
+      disabled: true,
       class: "btn btn-warning #{large_button} disabled" do %>
     <i class='icon-key'></i>
     <%= t('buttons.password_reset') %>
