--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -15,25 +15,32 @@
   <%= form_tag(fulfillments_index_path, :id => "fulfillment_report_form") do %>
     <table class="table table-bordered" id ="fulfillments_table">
     	<tr>
-        <td>
+        <td width="90px">
           <%= label :all_times, t('all_times'), :class => 'help-inline' %>
           <%= check_box_tag :all_times, 1, params[:all_times] %> 
         </td>
     		<td id="td_initial_date">
   	  		<%= label :initial_date, t('initial_date'), :class => 'help-inline' %>
-  	  	  <%= text_field_tag :initial_date, params[:initial_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
+  	  	  <%= text_field_tag :initial_date, params[:initial_date], { :class => 'datepicker input-small', :readonly => 'readonly' } %> 
     		</td>
     		<td id="td_end_date">
   	  		<%= label :end_date, t('end_date'), :class => 'help-inline' %>
-  	  	  <%= text_field_tag :end_date, params[:end_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
+  	  	  <%= text_field_tag :end_date, params[:end_date], { :class => 'datepicker input-small', :readonly => 'readonly' } %> 
     		</td>
     		<td>
           <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
           <%= fulfillment_selectable_statuses(:status, params[:status]) %>
         </td>
-        <td>
-          <%= label :product_type, t('activerecord.attributes.fulfillment.product_type'), :class => 'help-inline' %>
-          <%= select_tag :product_type, options_for_select([[Settings.kit_card_product],[Settings.others_product]], :selected => params[:product_type]), :class => 'select_field input-medium' %>  
+        <td width="240px">
+          <%= radio_button_tag 'radio_product_type', Settings.kit_card_product, Settings.kit_card_product == params[:product_type] %>
+          <%= label_tag Settings.kit_card_product, nil, :class => 'help-inline' %>
+          <br>
+          <%= radio_button_tag 'radio_product_type', Settings.others_product, Settings.others_product == params[:product_type] %>
+          <%= label_tag Settings.others_product, nil, :class => 'help-inline' %>
+          <br>
+          <%= radio_button_tag 'radio_product_type', Settings.others_product+'_others', ![Settings.others_product, Settings.kit_card_product].include?(params[:product_type]) %>
+          <%= text_field_tag :input_product_type, ([ Settings.others_product, Settings.kit_card_product ].include?(params[:product_type]) ? '' : params[:product_type] ), :class => 'help-inline' %>
+          <%= hidden_field_tag :product_type %>
         </td>
     	</tr>
     	<tr>
@@ -49,7 +56,7 @@
 <%= render :partial => "report_result" %>
 
 <script type="text/javascript">
-  $(document).ready( fulfillments_index_functions('<%= generate_xls_fulfillments_path %>', '<%= fulfillments_index_path %>', '<%= t("error_messages.fulfillment_file_cant_be_empty") %>') );
+  $(document).ready( fulfillments_index_functions('<%= generate_xls_fulfillments_path %>', '<%= fulfillments_index_path %>', '<%= t("error_messages.fulfillment_file_cant_be_empty") %>', '<%= Settings.kit_card_product %>', '<%= Settings.others_product %>') );
 </script>
 
 
