--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Search</h1>
+    <h1>Product</h1>
     <% if can? :create, Product %>
       <%= link_to(new_product_path, :class => "btn btn-primary btn_on_header", :id => "new_product") do %> 
         <i class="icon-plus"></i> New Product
@@ -23,7 +23,6 @@
     </tbody>
   </table>
 </section>
-
 
 <script>
   $(document).ready(product_index_functions(<%= Product.datatable_columns.size %>));
