--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -15,7 +15,7 @@
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:data_rights) %></th>
       <th><%= model_class.human_attribute_name(:hosted) %></th>
-      <th><%= t(:actions) %></th>
+      <th width="170px"><%= t(:actions) %></th>
     </tr>
   </thead>
   <tbody>
