ref#25876-added a text to explain that when club has no domain related it wont be able to set drupal domain, until domains are related to this club

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -51,7 +51,11 @@
   <div class="control-group">
     <%= f.label :drupal_domain_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.collection_select :drupal_domain_id, @club.domains, :id, :url, include_blank: true %>
+      <% if @club.domains.empty? %>
+        <%= I18n.t("activerecord.attributes.club.club_without_domains") %>
+      <% else %>
+        <%= f.collection_select :drupal_domain_id, @club.domains, :id, :url, include_blank: true %>
+      <% end %>
     </div>
   </div>
   <div class="control-group">
