ref#25901-added new operation api controller. Also changed the Auditory method, and added a two new operation types.-

--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -1,5 +1,5 @@
 
-<table class="table table-bordered table-condensed" id="credit_cards">
+<table class="table table-bordered table-condensed">
   <thead>
     <tr>
       <th> 
