--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -11,13 +11,11 @@
   <table class="table table-condensed table-bordered">
     <tr> 
       <td>
-        <div class="input-prepend input-append" style="float:left; width:25%">  
 	      <%= label :amount, t('activerecord.attributes.club_cash_transaction.amount'), :class=>"help-inline" %>
 	      <%= text_field :club_cash_transaction, :amount, 
             :value => (params[:club_cash_transaction][:amount] if params[:club_cash_transaction]) %>
-      	</div>      
-        </br></br></br>
-        <p style="float:left" class="help-inline"> <%= t('activerecord.attributes.club_cash_transaction.amount_help') %> </p>
+        </br>
+        <p class="help-inline"> <%= t('activerecord.attributes.club_cash_transaction.amount_help') %> </p>
       </td>      
     </tr>
     <tr> 
