ref#25932-added link on operation message when we change a fulfillment status from fulfillment file view

--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -52,7 +52,9 @@
   <% end %>
 
 <% end %>
-	
+
+<%= hidden_field_tag :fulfillment_file, nil, :id => 'fulfillment_file',
+                     :value => (@file.nil? ? '' : @file.id),  %>
 <%= render :partial => "report_result" %>
 
 <script type="text/javascript">
