--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -3,7 +3,7 @@
   <section>
     <div class="page-header">
       <h1>Search</h1>
-      <% if can? :enroll, Member %>
+      <% if can? :api_enroll, Member %>
         <%= link_to(new_member_path, :class => "btn btn-primary btn_on_header", :id => "new_member") do %> 
           <i class="icon-plus"></i> New Member
         <% end %>
