--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -54,7 +54,7 @@
 <% end %>
 
 <%= hidden_field_tag :fulfillment_file, nil, :id => 'fulfillment_file',
-                     :value => (@file.nil? ? '' : @file.id),  %>
+                     :value => (@file.nil? ? '' : @file.id) %>
 <%= render :partial => "report_result" %>
 
 <script type="text/javascript">
