--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -35,7 +35,7 @@
         <%= t('activerecord.attributes.credit_card.active') if cc.active %>
         <% if cc.can_be_activated? %>
           <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id) do |f| %>
-            <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm", :id => "activate_credit_card_button" ,:disabled => (cannot? :activate, CreditCard) %>
+            <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm", :id => "activate_credit_card_button" ,:disabled => (cannot? :activate, CreditCard, @current_club.id) %>
           <% end %>
         <% end %>
         <% if @current_member.lapsed? and not @current_member.blacklisted and not cc.active and not @current_member.is_chargeback? and can? :destroy, CreditCard %>
