--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -267,10 +267,15 @@
             <td id="td_mi_club_cash_amount">
               <%= @current_member.club_cash_amount %>&nbsp;&nbsp;&nbsp;
               <% unless disable_save_sale %>
-                <% disable = (cannot? :add_club_cash, Member or not @current_member.can_add_club_cash?) %>
-                <%= link_to((disable ? "#" : member_add_club_cash_path), :class => "btn btn-mini btn-success #{'disabled' if disable}", :id => "link_member_add_club_cash") do %> 
+                <% if (not @current_agent.can? :add_club_cash, Member, @current_club.id or not @current_member.can_add_club_cash?) %>
+                  <%= link_to('#', :class => "btn btn-mini btn-success", :id => "link_member_add_club_cash", :disabled => ("disable")) do %> 
                   <i class="icon-plus"></i> <%= t('activerecord.attributes.member.add_club_cash_transaction') %>
-                <% end %>              
+                  <% end %>
+                <% else %>
+                  <%= link_to(member_add_club_cash_path, :class => "btn btn-mini btn-success", :id => "link_member_add_club_cash") do %> 
+                  <i class="icon-plus"></i> <%= t('activerecord.attributes.member.add_club_cash_transaction') %>      
+                  <% end %>  
+                <% end %> 
               <% end %>
             </td>  
           </tr>
