--- a/app/views/admin/partners/_form.html.erb
+++ b/app/views/admin/partners/_form.html.erb
@@ -13,16 +13,16 @@
 <%= form_for [ :admin, @partner ], :html => { :class => 'form-horizontal' } do |f| %>
   <% if @partner.new_record? %>
     <div class="control-group">
-      <%= f.label :prefix, :class => 'control-label' %>
+      <%= f.label :prefix, :class => 'control-label required_asterick' %>
       <div class="controls">
         <%= f.text_field :prefix, :class => 'text_field' %>
       </div>
     </div>
   <% end %>
   <div class="control-group">
-    <%= f.label :name, :class => 'control-label' %>
+    <%= f.label :name, :class => 'control-label required_asterick' %>
     <div class="controls">
-      <%= f.text_field :name, :class => 'text_field' %>
+      <%= f.text_field :name, :class => 'text_field ' %>
     </div>
   </div>
   <div class="control-group">
@@ -51,7 +51,7 @@
   <div class="control-group">
     <%= fields_for :domain do |domain_fields| %>
       <div class="control-group">
-        <%= domain_fields.label :url, :class => 'control-label' %>
+        <%= domain_fields.label :url, :class => 'control-label required_asterick' %>
         <div class="controls">
           <%= domain_fields.text_field :url, :class => 'text_field', :name => "partner[domains_attributes][0][url]", :value => (params[:partner][:domains_attributes]["0"][:url] if params[:partner]) %>
           <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.domain.url_help')} %> 
