--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -1,5 +1,5 @@
   <div class="control-group">
-    <%= f.label :name, :class => 'control-label' %>
+    <%= f.label :name, :class => 'control-label required_asterick' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
     </div>
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :cs_phone_number, :class => 'control-label' %>
+    <%= f.label :cs_phone_number, :class => 'control-label required_asterick' %>
     <div class="controls">
       <%= f.text_field :cs_phone_number, :class => 'text_field' %>
     </div>
