ref#26070-added cc on transaction table

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -7,6 +7,7 @@
       <th> <%= t('activerecord.attributes.transaction.amount') %> </th>
       <th> <%= t('activerecord.attributes.transaction.refundable') %> </th>
       <th> <%= t('activerecord.attributes.transaction.gw_trans') %> </th>
+      <th> <%= t('activerecord.attributes.transaction.cc_related') %> </th>
       <th> <%= t('actions') %> </th>
     </tr>
   </thead>
