ref#26096-fix domain form.

--- a/app/views/domains/_form.html.erb
+++ b/app/views/domains/_form.html.erb
@@ -27,7 +27,7 @@
   <div class="control-group">
     <%= f.label :club_id, :class => 'control-label' %>
     <div class="controls">
-      <% if @domain.new_record? || (@domain.club.nil? && params[:action] == "edit") %>
+      <% if @domain.club.nil? %>
         <%= generate_select_club_id f, @domain, @clubs %>
       <% else %>
         <%= @domain.club.name %>
