ref#26092-added login remote button on member's profile top section

--- a/app/views/members/_sync_status.html.erb
+++ b/app/views/members/_sync_status.html.erb
@@ -2,24 +2,7 @@
 <div class="">
   <% if @current_member.can_be_synced_to_remote? %>
     <div class='tab-toolbar'>
-      <% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
-        <%= 
-          link_to "#", 
-            class: "btn btn-success disabled",
-            id: "login_remotely_as_member" do %>
-          <i class='icon-signin'></i>
-          <%= t('buttons.login_remotely_as_member') %>
-        <% end %>
-      <% else %>
-        <%= 
-          link_to login_as_member_path, 
-            id: "login_remotely_as_member",
-            class: "btn btn-success", 
-            target: '_blank' do %>
-          <i class='icon-signin'></i>
-          <%= t('buttons.login_remotely_as_member') %>
-        <% end %>
-      <% end %>
+      <%= render :partial => 'shared/login_remotely_button', :locals => { use_large_button: false } %>
       
       <%= render :partial => 'shared/resend_welcome_email_button', :locals => { use_large_button: false } %>
 
