--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -95,6 +95,9 @@
       <div class="span4">
         <%= render :partial => 'shared/reset_password_button', :locals => { use_large_button: true } %>
       </div>
+      <div class="span4">
+        <%= render :partial => 'shared/login_remotely_button', :locals => { use_large_button: true } %>
+      </div>
     </div>
 </div>
 
