--- a/app/views/members/change_next_bill_date.html.erb
+++ b/app/views/members/change_next_bill_date.html.erb
@@ -9,7 +9,7 @@
     <tr>
       <td>
         <%= label :next_bill_date, t('activerecord.attributes.member.next_retry_bill_date'), :class => 'help-inline' %> 
-        <%= text_field_tag :next_bill_date, nil ,:class => 'datepicker' %> 
+        <%= text_field_tag :next_bill_date, nil ,:class => 'datepicker', :readonly => true %> 
       </td>
     </tr>
     <tr>
