removed uuid from code

--- a/app/views/notifier/decline_strategy_not_found.rhtml
+++ b/app/views/notifier/decline_strategy_not_found.rhtml
@@ -1,7 +1,7 @@
 Message: <%= @message %>
 
 Membership_id: <%= @transaction.id %>
-Member: <%= @transaction.member.uuid %>
+Member: <%= @transaction.member.id %>
 CC type: <%= @transaction.cc_type %>
 Campaign type: <%= @transaction.transaction_type %>
 
