--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -32,7 +32,6 @@
 <% end %>
 
 <script>
-  var member_id = "<%= @current_member.id %>"; 
-  var visible_id = "<%= @current_member.visible_id %>"; 
+  var id = "<%= @current_member.id %>"; 
   $(document).ready(club_cash_functions())
 </script>
