--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -12,7 +12,7 @@
 		</tr>
 		</thead>
 		<thead>
-			<th> <%= t('activerecord.attributes.member.visible_id') %> </th>
+			<th> <%= t('activerecord.attributes.member.id') %> </th>
 			<th> <%= t('activerecord.attributes.fulfillment.member') %> </th>
 			<th> <%= t('activerecord.attributes.fulfillment.assigned_at') %> </th>
 			<th> <%= t('activerecord.attributes.fulfillment.renewable_at') %> </th>   
@@ -34,7 +34,7 @@
 			<% end %>
 			<% @fulfillments.each do |fulfillment| %>
 				<tr>
-					<td> <a href="<%= show_member_path(:member_prefix => fulfillment.member.visible_id) %>" > <%= fulfillment.member.visible_id %></a></td>
+					<td> <a href="<%= show_member_path(:member_prefix => fulfillment.member.id) %>" > <%= fulfillment.member.id %></a></td>
 					<td> <%= fulfillment.member.full_name %> </td>
 					<td> <%= I18n.l fulfillment.assigned_at, :format => :only_date %> </td>
 					<td> <%= I18n.l fulfillment.renewable_at, :format => :only_date unless fulfillment.renewable_at.nil? %> </td>
