--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -39,7 +39,7 @@
           <% end %>
         <% end %>
         <% if @current_member.lapsed? and not @current_member.blacklisted and not cc.active and not @current_member.is_chargeback? and can? :destroy, CreditCard %>
-          <%= link_to(I18n.t(:destroy), credit_card_path(@current_partner.prefix, @current_club.name, @current_member.visible_id, cc.id), :method => :delete, :id => "destroy",
+          <%= link_to(I18n.t(:destroy), credit_card_path(@current_partner.prefix, @current_club.name, @current_member.id, cc.id), :method => :delete, :id => "destroy",
                         :confirm => I18n.t("are_you_sure"),
                         :class => 'btn btn-mini btn-danger') %>
         <% end %>
