--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -21,9 +21,9 @@
               <td style="height: 233px;">
                 <table class="hidden_table_border">
                   <tr>
-                    <td><%= t('activerecord.attributes.member.member_id') %></td>
-                    <td>  <%= text_field :member, :member_id, :class => 'test_field',   
-                                     :value => (params[:member][:member_id] if params[:member])%>
+                    <td><%= t('activerecord.attributes.member.id') %></td>
+                    <td>  <%= text_field :member, :id, :class => 'test_field',   
+                                     :value => (params[:member][:id] if params[:member])%>
                     </td>
                   </tr>
                   <tr>
