--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <td><%= t('activerecord.attributes.member.member_id') %>:</td>
-        <td><input id="input_visible_id" readonly="true" type="text" class="test_field" value="<%= @current_member.visible_id %>" /></td>
+        <td><input id="input_id" readonly="true" type="text" class="test_field" value="<%= @current_member.id %>" /></td>
       </tr>
       <tr>
         <td><%= t('activerecord.attributes.member.first_name') %>:</td>
