--- a/app/views/shared/_resend_welcome_email_button.html.erb
+++ b/app/views/shared/_resend_welcome_email_button.html.erb
@@ -10,7 +10,7 @@
   <% end %>      
 <% else %>
   <%= 
-    link_to member_resend_welcome_path(@current_partner.prefix, @current_club.name, @current_member.visible_id), 
+    link_to member_resend_welcome_path(@current_partner.prefix, @current_club.name, @current_member.id), 
       method: :post, 
       class: "btn #{large_button} btn-info",
       id: "resend_welcome_email", 
