--- a/app/views/shared/_reset_password_button.html.erb
+++ b/app/views/shared/_reset_password_button.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 <% else %>
   <%= 
-    link_to member_reset_password_path(@current_partner.prefix, @current_club.name, @current_member.visible_id), 
+    link_to member_reset_password_path(@current_partner.prefix, @current_club.name, @current_member.id), 
       method: :post, 
       class: "btn btn-warning #{large_button}", 
       id: "password_reset",
